unpackaged/main/default/objects/Calendar_Dependent_Values__c/Calendar_Dependent_Values__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>Calendar Dependent Values</label>
</CustomObject>