unpackaged/main/default/objects/Calendar_Dependent_Values__c/fields/Controlling_Value__c.field-meta.xml
<CustomField>
    <fullName>Controlling_Value__c</fullName>
    <label>Controlling Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>